# FunctionalPlus

./: .clang-format-ignore  .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  appveyor.yml  before_install.sh  build_and_test.sh  conan_build.py  conanfile.py  conanfile.txt  install_libcxx.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml
all/: CMakeLists.txt  noop.cmake
api_search/: README.md  compile_all.sh  compile_all_and_deploy.sh  generate_api_search_database.cpp  generate_database.sh  parse_source_files.cpp
api_search/frontend/: ExploreCompile.sh  TypeSignatureTestCompile.sh  compile.sh  elm-package.json  elm.json
api_search/frontend/src/: Database.elm  Explore.elm  FPlusApiCommon.elm  FPlusApiExplore.elm  FPlusApiSearch.elm  Main.elm  TypeSignature.elm  TypeSignatureTestMain.elm  explore.html  htmlmain.js  htmlmain_explore.js  index.html  style.css  style_explore.css
api_search/frontend/src/highlight/: highlight.pack.js
cmake/: Config.cmake.in  Cpp11.cmake  FindGMock.cmake  FindGTest.cmake  Finddoctest.cmake  FunctionalPlusConfig.cmake  install-rules.cmake  install_libcxx.sh  pkgconfig.cmake  root-project.cmake  toolchain.cmake  toolchain_msvc.cmake  warnings.cmake
examples/: 99_problems.cpp  CMakeLists.txt  compile_and_run.sh  performance_range_v3.cpp  readme_examples.cpp  readme_perf_examples.cpp
generate/: auto_generate.py  generate_derived_functions.sh  generate_fwd_defines.sh
include/: fplus.h
include/FunctionalPlus/: Compare.h  Composition.h  ContainerCommon.h  ContainerProperties.h  ContainerTraits.h  Filter.h  FunctionTraits.h  FunctionalPlus.h  Generate.h  Maps.h  Maybe.h  Numeric.h  Pairs.h  Replace.h  Search.h  Show.h  Split.h  StringTools.h  Transform.h
include/fplus/: benchmark_session.hpp  compare.h  compare.hpp  composition.h  composition.hpp  container_common.h  container_common.hpp  container_properties.h  container_properties.hpp  container_traits.h  container_traits.hpp  curry.hpp  curry_instances.autogenerated_defines  extrapolate.hpp  filter.h  filter.hpp  fplus.h  fplus.hpp  function_traits.h  function_traits.hpp  fwd.hpp  fwd_instances.autogenerated_defines  generate.h  generate.hpp  interpolate.hpp  maps.h  maps.hpp  maybe.h  maybe.hpp  numeric.h  numeric.hpp  optimize.hpp  pairs.h  pairs.hpp  queue.hpp  raii.hpp  read.h  read.hpp  replace.h  replace.hpp  (+21 more)
include/fplus/detail/: apply.hpp  compare.hpp  composition.hpp  container_common.hpp  function_traits_asserts.hpp  invoke.hpp  meta.hpp  split.hpp
include/fplus/detail/asserts/: compare.hpp  composition.hpp  container_common.hpp  functions.hpp  generate.hpp  maybe.hpp  pairs.hpp  result.hpp  transform.hpp
include/fplus/internal/: apply.hpp  compare.hpp  composition.hpp  container_common.hpp  function_traits_asserts.hpp  invoke.hpp  meta.hpp  split.hpp
include/fplus/internal/asserts/: composition.hpp  functions.hpp  pairs.hpp
include_all_in_one/: CMakeLists.txt  make_all_in_one.py
include_all_in_one/include/fplus/: fplus.hpp
logo/: fplus.xcf
script/: auto_format.sh  ci.sh  ci_build.sh  ci_build_windows.bat  ci_install_clang.sh  ci_setup.sh  ci_setup_dependencies.sh  ci_setup_dependencies_windows.bat  ci_setup_libcxx.sh  ci_setup_linux.sh  ci_setup_locales.sh
test/: CMakeLists.txt  benchmark_session_test.cpp  compare_test.cpp  compile_and_run.sh  composition_test.cpp  container_common_test.cpp  container_properties_test.cpp  container_traits_test.cpp  curry_test.cpp  doctest_wrapper.h  extrapolate_test.cpp  filter_test.cpp  function_traits_test.cpp  fwd_test.cpp  generate_test.cpp  get_locale.hpp  interpolate_test.cpp  invoke_test.cpp  maps_test.cpp  maybe_test.cpp  numeric_test.cpp  optimize_test.cpp  pairs_test.cpp  queue_test.cpp  raii_test.cpp  read_test.cpp  readme_examples_test.cpp  replace_test.cpp  result_test.cpp  search_test.cpp  sets_test.cpp  shared_ref_test.cpp  show_test.cpp  show_versions.cpp  side_effects_test.cpp  split_test.cpp  stopwatch_test.cpp  stringtools_cp1251_test.cpp  stringtools_cp1253_test.cpp  stringtools_test.cpp  (+8 more)
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
